--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <img id="img-logo" src="emergency-idea/assets/emergency-idea-logo.png" alt="logo emergency-idea" />
+    <img id="img-logo" src="./assets/emergency-idea-logo.png" alt="logo emergency-idea" />
     <h1>Emergency <br> Idea</h1>
     <p id="paragraphe-chapeau">For Creatives suffering from the blank page syndrom, just before a client presentation.</p>
     <button class="buttonIdea" onclick="getRandomCard()">Get an Idea</button>
